# brisket

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build_wheels.yaml
docs/: Makefile  conf.py  example.ipynb  make.bat
original_script/: __init__.py  brisket.pyx  brisket_test.py  setup.py
tests/: test_brisket.py  test_wheel_import.py
